# Kurs_project_2_vacancies

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
src/: .flake8
src/api/: abstract_api.py  hh_api.py
src/models/: vacancy.py
src/storage/: abstract_storage.py  json_storage.py
src/utils/: filters.py
tests/: test_api.py  test_storage.py  test_vacancy.py
