[project]
name = "pythonproject2"
version = "0.1.0"
description = ""
authors = [
    {name = "Rezilya Stolyarova",email = "rezilek@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "requests (==2.31.0)",
    "pytest (==7.4.0)",
    "python-dotenv (==1.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.3.0"
black = "^25.1.0"
isort = "^6.0.1"
mypy = "^1.17.1"

